Moved board's style in css file and prevented line wrap on character names

--- a/pnp_zone/static/css/board.css
+++ b/pnp_zone/static/css/board.css
@@ -13,3 +13,42 @@
 #characters {
     z-index: 50;
 }
+.character {
+    transition-property: left, top;
+    transition-duration: 1s;
+    position: absolute;
+    z-index: inherit;
+}
+.character p {
+    white-space: nowrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: inherit;
+    height: inherit;
+    margin: 0;
+    text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000, 1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
+}
+.field polygon {
+    fill: none;
+}
+.field path {
+    fill: black;
+}
+body {
+    background-color: white;
+}
+#moderator {
+    position: sticky;
+    background: #192734;
+    padding: 1vw;
+    float: right;
+    width: 15vw;
+    z-index: 100;
+}
+#board-view {
+    height: 100vh;
+    width: 100%;
+    overflow: hidden;
+    position: absolute;
+}
